# on-drop

./: .gitignore  LICENSE  README.md  pyproject.toml
on_drop/: base.py  main.py
on_drop/websites/: thenorthface.py
tests/: conftest.py  test_base.py  test_thenorthface.py
