[tool.poetry]
name = "on-drop"
version = "0.1.0"
description = ""
authors = ["CrimpsOnSlopers <jrhawktwo@gmail.com>"]
readme = "README.md"
packages = [{include = "on_drop"}]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^14.0.0"
requests = "^2.32.3"
click = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
on-drop = "on_drop.main:main"